--- a/Frontend/expense-tracker/index.html
+++ b/Frontend/expense-tracker/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <link href="/src/index.css" rel="stylesheet">
-    <title>expense tracker</title>
+    <link rel="icon" href="/favicon.png" /> <!-- ✅ Or use data:, to suppress -->
+    <title>Expense Tracker</title>
   </head>
   <body>
     <div id="root"></div>
